====================================================================================================
====================================================================================================
CHANGE LOG
====================================================================================================
20.08.2018
==========
[+] Add SingletonLazy - Example of Lazy Singleton.
====================================================================================================