@@ -5,4 +5,5 @@ CHANGE LOG
 20.08.2018
 ==========
 [+] Add SingletonLazy - Example of Lazy Singleton.
+[*] Fix SingletonLazy - 2 Examples of Lazy Singleton.
 ====================================================================================================
